# retargeting-robot-models

./: CMakeLists.txt  README.md  model.config.in  package.xml
retargeting-models/: package.xml
retargeting-models/robots/baxter/: README.md  model.urdf
retargeting-models/robots/baxter/conf/: gazebo_baxter_left_arm.ini
retargeting-models/robots/nao/: README.md  homePosition.ini  model.urdf
retargeting-models/robots/nao/conf/: gazebo_nao_head.ini  gazebo_nao_left_arm.ini  gazebo_nao_left_hand.ini  gazebo_nao_left_leg.ini  gazebo_nao_pelvis.ini  gazebo_nao_right_arm.ini  gazebo_nao_right_hand.ini  gazebo_nao_right_leg.ini
retargeting-shell-scripts/: retargeting-yarprobotinterface.sh  retargeting-yarprobotstatepublisher.sh
robots/atlas/: README.md  atlas.urdf  homePosition.ini  model.urdf
robots/atlas/conf/: gazebo_atlas_head.ini  gazebo_atlas_left_arm.ini  gazebo_atlas_left_leg.ini  gazebo_atlas_right_arm.ini  gazebo_atlas_right_leg.ini  gazebo_atlas_robotname.ini  gazebo_atlas_torso.ini
robots/baxter/: baxter.urdf  homePosition.ini  model.urdf
robots/baxter/conf/: gazebo_baxter_head.ini  gazebo_baxter_right_arm.ini  gazebo_baxter_robotname.ini
robots/nao/: README.md  homePosition.ini  model.urdf
robots/nao/conf/: gazebo_nao_head.ini  gazebo_nao_left_arm.ini  gazebo_nao_robotname.ini
robots/walkman/: README.md  dummy  homePosition.ini  model.urdf  walkman.urdf
robots/walkman/conf/: gazebo_walkman_head.ini  gazebo_walkman_left_arm.ini  gazebo_walkman_left_leg.ini  gazebo_walkman_right_arm.ini  gazebo_walkman_right_leg.ini  gazebo_walkman_robotname.ini  gazebo_walkman_torso.ini
ros/launch/: retargetingRobotModelsRviz.launch
ros/rviz/: retargetingRobotModelsRviz.rviz
